# coursework-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  README.md  benchmark.cpp  cache.hpp  gen.py  utils.cpp  utils.hpp
benchmark/results/: column.csv  column_cache.txt  fft_cache.txt  fourier.csv  raw_output.txt
src/: CMakeLists.txt  main.cpp
src/fourier/: CMakeLists.txt  fourier.cpp
src/modes/: CMakeLists.txt  modes.cpp
src/number/: CMakeLists.txt  number.cpp  number.h
test/: CMakeLists.txt  tests.cpp
test/numbers/: gen.py
tests/: CMakeLists.txt  bench.xml  tests.cpp  xml_parser.py
